# Python_for_AI

./: README.md  pyproject.toml
fine_tuned_company_model/: adapter_config.json  adapter_model.safetensors
hw_03/: main.py
hw_04/: embeddings.py  main.py
hw_05/: main.py  promthub.txt  qa.py  sample.txt
hw_06/: agent_pr_review.txt
hw_07/: generate.py  prompt_engineering.txt
hw_08/: multimodal_ideas.txt
hw_09/: rag_examples.txt
hw_10/: finetune_improved.py  finetuning.py  test_model.py
results/checkpoint-10/: optimizer.pt  trainer_state.json
