[project]
name = "python-for-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "python-dotenv>=1.1.0",
    "openai>=1.0.0",
    "tenacity>=9.0.0",
    "numpy>=2.0.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "faiss-cpu>=1.9.0",
]
